In grease pencil stroke editing, selecting points is offset by a few pixels #44685

Closed
opened 2015-05-12 17:58:23 +02:00 by Hadrien Brissaud · 10 comments

System Information
Win7x64gtx660m

Blender Version
Broken: 2.74 release
Worked: (optional)

Short description of error
In grease pencil stroke edit mode, clicking on a stroke point will select a point offset from the mouse pointer by about a dozen of pixels. See image : greasepencilbug.PNG I use dual monitors in case this is relevant.

Exact steps for others to reproduce the error
open blend greasepencilselectbug.blend, click on a stroke point. If view is switched to left side, then offset is reversed (selected point is on upper-left of pointer instead of upper-right).

**System Information** Win7x64gtx660m **Blender Version** Broken: 2.74 release Worked: (optional) **Short description of error** In grease pencil stroke edit mode, clicking on a stroke point will select a point offset from the mouse pointer by about a dozen of pixels. See image : ![greasepencilbug.PNG](https://archive.blender.org/developer/F173420/greasepencilbug.PNG) I use dual monitors in case this is relevant. **Exact steps for others to reproduce the error** open blend [greasepencilselectbug.blend](https://archive.blender.org/developer/F173422/greasepencilselectbug.blend), click on a stroke point. If view is switched to left side, then offset is reversed (selected point is on upper-left of pointer instead of upper-right).

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @hadrien

Added subscriber: @hadrien
Joshua Leung self-assigned this 2015-05-13 00:47:57 +02:00
Member

What is probably happening is that the selection brush threshold is too large for the zoom level. Unlke all other selection operators, the GPencil one is really just a single shot circle select with a radius of 5px IIRC. That radius cannot be too small or else it gets impossible or very hard to make any selections at all.

What is probably happening is that the selection brush threshold is too large for the zoom level. Unlke all other selection operators, the GPencil one is really just a single shot circle select with a radius of 5px IIRC. That radius cannot be too small or else it gets impossible or very hard to make any selections at all.

Added subscribers: @JoshuaLeung, @Sergey

Added subscribers: @JoshuaLeung, @Sergey

@JoshuaLeung, are you selecting first point which is inside the threshold area or the closes point which isi n that area?

@JoshuaLeung, are you selecting first point which is inside the threshold area or the closes point which isi n that area?
Member

It's just grabbing all of them ;)

Yes, it probably could/should be improved (as there are cases where it gets inconvenient that the whole bunch of them get selected), but at the time, that was the simplest option available for quickly getting something working there.

It's just grabbing *all* of them ;) Yes, it probably could/should be improved (as there are cases where it gets inconvenient that the whole bunch of them get selected), but at the time, that was the simplest option available for quickly getting something working there.
Member

I've just double checked the code tonight. Ignore my previous comments here - it looks like I ended up coding a different method for this, which does indeed have several issues (especially in cases like this). Here it should in general favour the strokes on the left, assuming that you were drawing from left to right.

I've just double checked the code tonight. Ignore my previous comments here - it looks like I ended up coding a different method for this, which does indeed have several issues (especially in cases like this). Here it should in general favour the strokes on the left, assuming that you were drawing from left to right.

This issue was referenced by 206f29c12c

This issue was referenced by 206f29c12c59f13f5815701dd7ceeee4ff8d3a64
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 206f29c12c.

Closed by commit 206f29c12c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44685
No description provided.